<resources>
    <string name="app_name">LoginTest</string>
    <!-- Strings related to login -->
    <string name="prompt_email">Email or Username</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="FastChat">appname2</string>
    <string name="appname2">FastChat</string>
    <string name="SignIn">Sign in</string>
    <string name="register_text">Need an account? Register.</string>
    <string name="register">Register</string>
    <string name="password">password</string>
    <string name="email_address">email address</string>
    <string name="full_name">full name</string>
    <string name="confirm_password">confirm password</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="change">Change</string>
    <string name="cancel">Cancel</string>
</resources>