<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:layout_margin="10dp"
    android:gravity="center">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/register"
        android:textSize="24sp"
        android:textStyle="bold"
        android:gravity="center"
        android:padding="16dp"
        android:textColor="@color/black"/>

    <com.google.android.material.imageview.ShapeableImageView
        android:id="@+id/userImage"
        android:layout_height="150dp"
        android:layout_width="150dp"
        app:shapeAppearanceOverlay="@style/roundedImageViewRounded"
        app:strokeColor="#FFF"
        app:strokeWidth="0dp"
        android:src="@drawable/ic_user_foreground"
        android:background="@color/black"
        android:scaleType="fitXY"/>

    <TextView
        android:id="@+id/changeProfileImage"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Change Profile Image"
        android:textColor="@color/holo_blue"
        android:layout_marginBottom="15dp"
        android:clickable="true"
        />

    <EditText
        android:id="@+id/editTextName"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/full_name"
        android:padding="16dp"
        android:inputType="textPersonName"
        android:background="@drawable/edit_text_background"
        android:layout_marginBottom="16dp"/>

    <EditText
        android:id="@+id/editTextEmail"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/email_address"
        android:padding="16dp"
        android:inputType="textEmailAddress"
        android:background="@drawable/edit_text_background"
        android:layout_marginBottom="16dp"/>

    <EditText
        android:id="@+id/editTextPassword"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/password"
        android:padding="16dp"
        android:inputType="textPassword"
        android:background="@drawable/edit_text_background"
        android:layout_marginBottom="16dp"/>

    <EditText
        android:id="@+id/editTextConfirmPassword"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/confirm_password"
        android:padding="16dp"
        android:inputType="textPassword"
        android:background="@drawable/edit_text_background"
        android:layout_marginBottom="16dp"/>


    <Button
        android:id="@+id/buttonRegister"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/register"
        android:background="@drawable/button_background"
        android:textColor="@color/white"
        android:textSize="16sp"
        android:layout_marginTop="32dp"
        android:layout_marginLeft="16dp"
        android:layout_marginRight="16dp"/>

</LinearLayout>
